Fix middle card padding on mobile

--- a/pricing-component-with-toggle/styles/card.scss
+++ b/pricing-component-with-toggle/styles/card.scss
@@ -33,6 +33,8 @@
   @media (max-width: $mobile-max-width) {
     &.professional {
       height: $card-height;
+      padding-top: 20px;
+      padding-bottom: 20px;
     }
   }
 
