--- a/pricing-component-with-toggle/www/main.css
+++ b/pricing-component-with-toggle/www/main.css
@@ -31,6 +31,8 @@
 @media (max-width: 1050px) {
   .card.professional {
     height: 400px;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 }
 .card.primary {
